--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 /* src/components/Header.css */
 body {
     margin: 0;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'DM Sans';
     font-size: 16px;
     font-style: normal;
     background-color: #f0f2f5;
@@ -15,36 +15,52 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 40px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #e1e1e1;
+    background-color: #6d0a0ace;
     width: 100%;
     box-sizing: border-box;
+    position: sticky;
 }
 
 .header .logo {
+    width: 12%;
     display: flex;
+    justify-content: center;
     align-items: center;
-    height: 40px;
-    margin-right: 20px;
+    overflow: hidden;
+    padding: 5px;
+    margin: 5 0 5 0 px;
 }
 
 .header .logo img {
-    height: 50%; /* Ajuster la hauteur relative */
-    width: auto;
-    max-height: 40px; /* Assurez-vous que le logo ne dépasse pas une certaine taille */
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-color: #6d0a0a00; 
+}
+
+.moviesync {
+    font-family:'Raleway';
+    font-size: 36px; /* Taille de la police */
+    font-weight: bold; /* Gras */
+    color: #000000; /* Couleur du texte */
+    text-align: center; /* Centrage du texte */
 }
 
 .header nav {
     display: flex;
     align-items: center;
     flex-grow: 1;
+    margin: 25px;
+    padding:25 px;
 }
 
 .header nav a {
     margin: 0 15px;
     text-decoration: none;
     color: #333;
-    font-size: 16px;
+    font-size: 32px;
 }
 
 .header nav a:hover {
@@ -57,17 +73,19 @@ body {
     align-items: center;
     flex-grow: 1;
     justify-content: center;
+    padding: 0 0 0 25px;
+    
 }
 
 .header .profile {
-    width: 40px;
-    height: 40px;
-    background-color: #007BFF;
-    border-radius: 50%;
+    width: 10%;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding: 25px;
+    margin: 25px;
 }
 
 .header .profile img {
@@ -89,7 +107,7 @@ body {
 }
 
 body, button, input {
-    font: 1em Hind, sans-serif;
+    font-family: 'DM Sans';
     line-height: 1.5em;
 }
 
@@ -136,8 +154,8 @@ body {
 }
 
 .search-bar {
-    margin: auto;
-    padding: 1.5em;
+    margin: 25px;
+    padding: 25px;
     justify-content: center;
     max-width: 30em;
 }
