--- a/src/Components/profil/ProfilePage.css
+++ b/src/Components/profil/ProfilePage.css
@@ -1,49 +1,87 @@
-/* src/Components/profil/ProfilePage.css */
+/* src/Components/ProfilePage.css */
 .profile-page {
-  color: white;
   background-color: black;
-  padding: 20px;
+  color: white;
+  min-height: 100vh;
+  padding: 40px;
+  font-family: 'DM Sans', sans-serif;
+}
+
+.profile-page h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
 }
 
 .profile-section {
+
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.profile-section h2, .profile-section h3 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.profile-info {
   display: flex;
   align-items: center;
+  margin-bottom: 40px;
 }
 
-.profile-pic-container {
+.profile-pic {
   position: relative;
-}
-
-.profile-pic img {
-  border-radius: 50%;
   width: 100px;
   height: 100px;
 }
 
-.edit-btn {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: white;
-  border: none;
+.profile-pic img {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+}
+
+.edit-icon {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  background-color: white;
+  color: black;
+  border-radius: 50%;
+  padding: 2px 5px;
   cursor: pointer;
 }
 
-.profile-info input {
-  display: block;
-  margin: 10px 0;
-  padding: 10px;
-  width: 200px;
+.profile-details {
+  margin-left: 20px;
 }
 
-.profile-edit-options button {
+.profile-details input {
   display: block;
-  margin: 10px 0;
+  width: 300px;
   padding: 10px;
-  width: 200px;
-  background-color: #333;
-  color: white;
+  margin-bottom: 10px;
   border: none;
+  border-radius: 5px;
+  background-color: #2c2c2c;
+  color: white;
+  font-size: 16px;
+}
+
+.profile-settings button {
+  display: block;
+  width: 300px;
+  padding: 15px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #2c2c2c;
+  color: white;
+  font-size: 16px;
   cursor: pointer;
+}
+
+.profile-settings button:hover {
+  background-color: #3c3c3c;
 }
