--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,7 +4,6 @@ body {
     font-family: 'DM Sans';
     font-size: 16px;
     font-style: normal;
-    background-color: #f0f2f5;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -15,7 +14,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 40px;
-    background-color: #6d0a0ace;
+    background-color: transparent;
     width: 100%;
     box-sizing: border-box;
     position: sticky;
@@ -37,14 +36,14 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background-color: #6d0a0a00; 
+    
 }
 
 .moviesync {
     font-family:'Raleway';
     font-size: 36px; /* Taille de la police */
     font-weight: bold; /* Gras */
-    color: #000000; /* Couleur du texte */
+    color: white; /* Couleur du texte */
     text-align: center; /* Centrage du texte */
 }
 
@@ -59,7 +58,7 @@ body {
 .header nav a {
     margin: 0 15px;
     text-decoration: none;
-    color: #333;
+    color: white;
     font-size: 32px;
 }
 
@@ -120,7 +119,7 @@ body, .search-bar {
 }
 
 body {
-    background: #f1f1f1;
+    background-color: black;
     height: 100vh;
 }
 
@@ -163,7 +162,7 @@ body {
 .search-bar input {
     background: transparent;
     border-radius: 1.5em;
-    box-shadow: 0 0 0 0.4em #171717 inset;
+    box-shadow: 0 0 0 0.4em white inset;
     padding: 0.75em;
     transform: translate(0.5em,0.5em) scale(0.5);
     transform-origin: 100% 0;
@@ -185,7 +184,7 @@ body {
 }
 
 .search-btn {
-    background: #171717;
+    background: white;
     border-radius: 0 0.75em 0.75em 0 / 0 1.5em 1.5em 0;
     padding: 0.75em;
     position: relative;
@@ -203,7 +202,7 @@ body {
 
 .search-btn:before {
     border-radius: 50%;
-    box-shadow: 0 0 0 0.2em #f1f1f1 inset;
+    box-shadow: 0 0 0 0.2em white inset;
     top: 0.75em;
     left: 0.75em;
     width: 1.2em;
@@ -211,7 +210,7 @@ body {
 }
 
 .search-btn:after {
-    background: #f1f1f1;
+    background: white;
     border-radius: 0 0.25em 0.25em 0;
     top: 51%;
     left: 51%;
@@ -260,17 +259,17 @@ body {
     }
 
     body {
-        background: #171717;
+        background: white;
     }
 
     .search-bar input {
-        box-shadow: 0 0 0 0.4em #f1f1f1 inset;
+        box-shadow: 0 0 0 0.4em white inset;
     }
 
     .search-bar input:focus,
     .search-bar input:valid {
         background: #3d3d3d;
-        box-shadow: 0 0 0 0.1em #3d3d3d inset;
+        box-shadow: 0 0 0 0.1em white inset;
     }
 
     .search-btn {
