--- a/src/Components/SuggestionsCarousel/SuggestionsCarousel.css
+++ b/src/Components/SuggestionsCarousel/SuggestionsCarousel.css
@@ -1,3 +1,5 @@
+/* SuggestionsCarousel.css */
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 
 .suggestions-container {
@@ -74,4 +76,15 @@ h2 {
     font-size: 0.9em;
     color: #ddd;
     margin: 10px 0;
+}
+
+/* Ajoutez ces styles pour les liens */
+.movie-card a {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+}
+
+.movie-card a:hover {
+    color: inherit;
 }
