--- a/src/Components/MovieDetails/MovieDetails.css
+++ b/src/Components/MovieDetails/MovieDetails.css
@@ -1,27 +1,41 @@
-/* src/Components/MovieDetails/MovieDetails.css */
-
-.movie-details {
+.movie-details-container {
   position: relative;
-  background-size: cover;
-  background-position: center;
-  height: 900px;
   color: white;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: flex-start; /* Alignement en haut */
+  height: 800px;
+}
+
+.movie-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: 0; /* Positionne le background en arrière-plan */
 }
 
 .movie-details-content {
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 20px;
+  padding: 40px;
   border-radius: 10px;
-  max-width: 600px;
+  max-width: 800px;
   text-align: left;
+  position: relative;
+  z-index: 1; /* Positionne le contenu devant le background */
+  margin-top: 70px; /* Ajustez la hauteur selon vos besoins */
 }
 
 .movie-title {
-  font-size: 3em;
-  margin-bottom: 20px;
+  font-size: 2.5em; /* Ajustez la taille du texte selon vos préférences */
+  margin-bottom: 20px; /* Espacement sous le titre */
+  text-align: center; /* Centre le titre horizontalement */
+  line-height: 1.2; /* Ajuste l'interligne pour éviter les chevauchements */
+  word-break: break-word; /* Permet au texte de se casser en cas de dépassement */
+  overflow-wrap: break-word; /* Assure que les mots longs se cassent correctement */
 }
 
 .movie-buttons {
@@ -35,20 +49,62 @@
   color: white;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 50px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .movie-button:hover {
-  background-color: #333;
+  background-color: #ff0000;
 }
 
-.movie-info p {
+.movie-info1 {
+  margin-top: 20px;
+  line-height: 1.5;
+  margin-bottom: 20px; /* Ajout d'un margin-bottom pour espacer les sections */
+}
+
+.movie-info1 p {
   margin: 5px 0;
 }
 
 .movie-synopsis {
   margin-top: 20px;
   line-height: 1.5;
+}
+
+/* Style pour le modal (fenêtre pop-up) */
+.modal {
+  display: none; /* Caché par défaut */
+  position: fixed;
+  z-index: 1; /* Positionné au-dessus du contenu */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Fond sombre */
+}
+
+/* Contenu du modal */
+.modal-content {
+  background-color: black;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Largeur du modal */
+}
+
+/* Bouton de fermeture du modal */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: rgb(87, 75, 75);
+  text-decoration: none;
+  cursor: pointer;
 }
