--- a/src/Components/SuggestionsCarousel/SuggestionsCarousel.css
+++ b/src/Components/SuggestionsCarousel/SuggestionsCarousel.css
@@ -77,18 +77,29 @@ h2 {
     margin: 10px 0;
 }
 
-/* Style du bouton de favoris */
-.favorite-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    color: white;
-    font-size: 1.5em;
-    cursor: pointer;
+.details-link {
+    position: relative;
+    border-radius: 50px;
+    background-color: #000;
+    width: 50%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 10px;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    font-family: 'DM Sans';
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
 }
 
-.favorite-button:focus {
-    outline: none;
+.details-link:hover {
+    background-color: #333;
+    transform: scale(1.00);
 }
+
+
