--- a/src/Components/TrendCarousel/TrendCarousel.css
+++ b/src/Components/TrendCarousel/TrendCarousel.css
@@ -75,3 +75,29 @@ h2 {
     color: #ddd;
     margin: 10px 0;
 }
+
+.details-link {
+    position: relative;
+    border-radius: 50px;
+    background-color: #000;
+    width: 50%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 10px;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    font-family: 'DM Sans';
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.details-link:hover {
+    background-color: #333;
+    transform: scale(1.00);
+}
+
